Move SEAL to CMS-IG namespace (BC Break) (#458)
# BC Breaks

To upgrade use search and replace also have a look at the .examples
changes to better understand the upgrade.

 - Package names:
    - `schranz-search/seal` -> `cmsig/seal`
    - `schranz-search/seal-...-adapter` -> `cmsig/seal-...-adapter`
    - `schranz-search/laravel-package` -> `cmsig/seal-laravel-package`
    - `schranz-search/mezzio-module` -> `cmsig/seal-mezzio-module`
    - `schranz-search/spiral-bridge` -> `cmsig/seal-spiral-bridge`
    - `schranz-search/yii-module` -> `cmsig/seal-yii-module`
    - `schranz-search/symfony-bundle` -> `cmsig/seal-symfony-bundle`

 - Namespaces:
    - `Schranz\Search\SEAL` -> `CmsIg\Seal\`
    - `Schranz\Search\Integration` -> `CmsIg\Seal\Integration`

 - Config Files:
    - `schranz_search.*` -> `seal.*`

 - Config, Service names, Tagged Services:
    - `schranz_search.*` -> `seal.*`

 - Commands:
    - `schranz:search:*` -> `cmsig:seal:*`

 - Spiral Integration Changes:
   - `SearchBootloader` -> `SealBootloader`
   - `SearchConfig` -> `SealConfig`

 - Symfony Integration Changes:
   - `SearchBundle` -> `SealBundle`

 - Laravel Integration Changes:
   - `SearchProvider` -> `SealProvider`

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-    "name": "schranz-search/seal-opensearch-adapter",
-    "description": "An adapter to support opensearch in schranz-search/seal search abstraction.",
+    "name": "cmsig/seal-opensearch-adapter",
+    "description": "An adapter to support opensearch in cmsig/seal search abstraction.",
     "type": "library",
     "license": "MIT",
     "keywords": [
-        "schranz-search",
-        "schranz-search-adapter",
+        "cmsig",
+        "seal",
         "seal-adapter",
         "search-client",
         "opensearch"
     ],
     "autoload": {
         "psr-4": {
-            "Schranz\\Search\\SEAL\\Adapter\\Opensearch\\": "src"
+            "CmsIg\\Seal\\Adapter\\Opensearch\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Schranz\\Search\\SEAL\\Adapter\\Opensearch\\Tests\\": "tests"
+            "CmsIg\\Seal\\Adapter\\Opensearch\\Tests\\": "tests"
         }
     },
     "authors": [
@@ -28,7 +28,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "schranz-search/seal": "^0.6",
+        "cmsig/seal": "^0.6",
         "opensearch-project/opensearch-php": "^2.0",
         "psr/container": "^1.0 || ^2.0"
     },
