--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         "phpunit/phpunit": "^10.3",
         "rector/rector": "^1.0"
     },
+    "replace": {
+        "schranz-search/seal-opensearch-adapter": "self.version"
+    },
     "scripts": {
         "test": [
             "Composer\\Config::disableProcessTimeout",
